--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <title>Tela de Cadastro</title>
     <link rel="stylesheet" type="text/css" href="style_login.css" />
     <link rel="stylesheet" type="text/css" href="style2_login.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   </head>
   <body style="margin: 0px">
     <div id="l">
@@ -160,7 +161,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="body-input-email_address"></div>
+                              <input class="body-input-email_address">
                             </div>
                             <div class="body-t-div-field-4">
                               <div class="body-div-field-7">
@@ -175,7 +176,10 @@
                             </div>
                             <div class="body-t-campos-obrigat-rios">
                               <div class="body-campos-obrigat-rios">
-                                Manter o Login neste Computador
+                                <label>
+                                  <input type="checkbox" name="manter-login" />
+                                  Manter o Login neste Computador
+                                </label>
                               </div>
                             </div>
                           </div>
@@ -189,9 +193,9 @@
                           </div>
                         </div>
                       </div>
-                      <div class="body-button-action">
+                      <button onclick="irHome()" class="body-button-action">
                         <div class="body-criar-conta">Login</div>
-                      </div>
+                      </button>
                     </div>
                   </div>
                   <img
@@ -361,6 +365,9 @@
         </div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="indexresumo.js"></script>
+    <script type="text/javascript" src="loginfeito.js"></script>
   </body>
 </html>
 
